# telegram-transactional-chatbot

./: .gitignore  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml  start.py
.github/workflows/: build-action.yaml  github-push-action.yaml
app/: __init__.py  settings.py
app/telegram/: __init__.py  bot.py  callbacks.py  core.py  handlers.py  telegram_bot.py
