[tool.poetry]
name = "telegram-transactional-chatbot"
version = "0.1.0"
description = "A fintech telegram chatbot for mobile money management"
authors = ["abdoulfataoh <abdoulfataoh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
environs = "^9.5.0"
python-telegram-bot = "^20.0"

[tool.poetry.dev-dependencies]
ipython = "^8.8.0"
flake8 = "^6.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
